Added styling and some functionality. Near complete.

--- a/views/input.html
+++ b/views/input.html
@@ -1,4 +1,5 @@
-<div>
+<div id="form">
+	<h2> Watch what happens to the story!</h2>
 	<form>
 		<input type="text" name="in1" ng-model="words[0]" placeholder="plural animal">
 		<input type="text" name="in2" ng-model="words[1]" placeholder="city/place">
