Last changes to CSS and content.

--- a/views/display.html
+++ b/views/display.html
@@ -1,5 +1,5 @@
 <div id="story">
-	<p>There once was a lucky band of <span>{{storyWords[0]}}</span> who lived in <span>{{storyWords[1]}}</span>. They had a <span>{{storyWords[2]}}</span> master named Kai-Lan who loved <span>{{storyWords[3]}}</span>. They angered the master when they <span>{{storyWords[4]}}</span> a <span>{{storyWords[5]}}</span>. The master was so angry that he banished them <span>{{storyWords[0]}}</span>  to <span>{{storyWords[6]}}</span>. They never came back. The end.</p>
+	<p>There once was a lucky band of <span>{{storyWords[0]}}</span> who lived in <span>{{storyWords[1]}}</span>. They had a <span>{{storyWords[2]}}</span> master named Kai-Lan who loved <span>{{storyWords[3]}}</span>. They angered the master when they <span>{{storyWords[4]}}</span> a <span>{{storyWords[5]}}</span>. The master was so angry that he banished the <span>{{storyWords[0]}}</span>  to <span>{{storyWords[6]}}</span>. They never came back. The end.</p>
 </div> 
 
 
